--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
         </form>
 
         <div class="auth-switch">
-            Don't have an account? <a href="/signup">Create one</a>
+            <p>Don't have an account? <a href="/signup">Sign up now</a></p>
         </div>
     </div>
 </div>
